# strava-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py  setup_strava_mcp.py  strava-mcp.py  strava-sync.py
backend/: app.py  backend.py  requirements.txt  vercel.json
create_strava_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
setup/: pyproject.toml  requirements.txt  setup.py  setup_strava_mcp.py  strava-mcp.py
