[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-strava-mcp"               # ← Package name uses dashes
version = "1.0.0"
authors = [
    {name = "Michael Gundersen", email = "michael.nesodden@gmail.com"},
]
description = "Automated setup tool for Strava MCP integration with Claude Desktop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
]
keywords = ["strava", "mcp", "claude", "anthropic", "fitness", "automation"]

[project.urls]
Homepage = "https://github.com/theagilepadawan/strava-mcp"
"Bug Reports" = "https://github.com/your-username/strava-mcp/issues"
"Source" = "https://github.com/theagilepadawan/strava-mcp"

[project.scripts]
create-strava-mcp = "setup_strava_mcp:main"    # ← Entry point: dash = underscore:function

[tool.setuptools]
py-modules = ["setup_strava_mcp"]              # ← Python module uses underscores
